--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 
     <body>
         <h1>HEJ</h1>
-
+        <header class="navbar">
+            <div class="navigation">
+                <div class="dropdown">
+                  
+                <label for="drop" class="dropknap">&#9776;MENU</label>
+                <input style="display: none; " type="checkbox" id="drop"/> 
+                
+                <div class="dropdownknapper">  
+                    <a href="">Forside</a>
+                    <a href="">Tilmelding</a>
+                    <a href="">Om os</a>
+                    <a href="">Kontakt</a>
+                    </div>
 
     </body>
 
