--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <input style="display: none; " type="checkbox" id="drop"/> 
                 
                 <div class="dropdownknapper">  
-                    <a href="">Forside</a>
-                    <a href="">Tilmelding</a>
-                    <a href="">Om os</a>
+                    <a href="">Bolig</a>
+                    <a href="">Familie</a>
+                    <a href="">Opsparing</a>
                     <a href="">Kontakt</a>
                     </div>
 
