--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
     <body>
 
+        <section>
+            <div class="boxes">
+               <img src="download.png" alt="home icon">
+            </div>
+
+            <div class="boxes">
+                <img src="people.png" alt="people icon">
+            </div>
+        </section>
+
 
     </body>
 
